[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.10.3"
solana-program = "1.18.18"
solana-sdk = "1.18.18"

[dev-dependencies]
solana-sdk = "1.18.18"
solana-program-test = "1.18.18"
