[package]
name = "lever"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lever"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = ["init-if-needed"] }
solana-program = "=1.18"

[dev-dependencies]
solana-program-test = "=1.18"
solana-sdk = "=1.18"
