[package]
name = "setter"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
solana-program = "=2.0"
solana-sdk = "=2.0"

[dev-dependencies]
solana-program-test = "=2.0"
solana-sdk = "=2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
